# mu

./: .gitignore  CHANGELOG.md  LICENSE  mu.cabal
app/: Command.hs  Commands.hs  Config.hs  Downloader.hs  Editor.hs  FileInfo.hs  Global.hs  Main.hs  Messages.hs  Options.hs  Play.hs  Player.hs  Serialise.hs  Update.hs
app/Config/: Defaults.hs  Parse.hs  User.hs
app/Config/Parse/: Spec.hs
app/Update/: Changes.hs  Manage.hs  Parse.hs  Serialisation.hs
resources/: fileinfo.dhall  messages.dhall
src/: Lib.hs
