cabal-version:      3.0
name:               mu
version:            0.1.0.0
synopsis:           Command line music player
homepage:           https://github.com/Futarimiti/mu
license:            MIT
license-file:       LICENSE
author:             Futar
maintainer:         Futarimiti@163.com
category:           Sound
build-type:         Simple
extra-doc-files:    README.md
data-dir:           resources
data-files:         messages.dhall
                  , fileinfo.dhall

common warnings
    ghc-options: -Wall -Wmonomorphism-restriction

executable mu
    import:           warnings
    main-is:          Main.hs
    other-modules:    Lib
                    , Commands
                    , Options
                    , Config
                    , Config.Defaults
                    , Config.User
                    , Config.Parse
                    , Editor
                    , Player
                    , Downloader
                    , Messages
                    , Update
                    , Play
                    , Paths_mu
                    , FileInfo
                    , Serialise
    build-depends:    base ^>=4.17.1.0
                    , optparse-applicative
                    , transformers ^>=0.6.0.0
                    , dhall
                    , process
                    , text
                    , directory
                    , filepath
                    , temporary
                    , yaml
                    , bytestring
                    , containers
                    , serialise
    hs-source-dirs:   app, src
    default-language: GHC2021
